envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8888
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route: 
                  cluster: web_service
          http_filters:
          - name: envoy.filters.http.wasm
            config:
                config:
                  name: test_wasm_plugin
                  vm_config:
                    vm_id: test_vm
                    runtime: envoy.wasm.runtime.v8
                    code:
                      local: { filename: /host/filter.wasm }
          - name: envoy.router
            config: {}
  - name: staticreply
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8099
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/get"
                direct_response:
                  status: 200
                  body:
                    inline_string: |
                      { "Hello": "World" }
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "example body\n"
          http_filters:
          - name: envoy.router
            config: {}

  clusters:
  - name: web_service
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8099
  - name: iam
    connect_timeout: 5s
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: iam
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: qa.iam.platform.prod.walmart.com
                    port_value: 443
    tls_context:
      common_tls_context: {}

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
